--- a/src/css/playlist.css
+++ b/src/css/playlist.css
@@ -3,14 +3,13 @@
 }
 
 .playlist-section {
-  max-width: 1200px;
-  margin: 0 auto;
+  max-width: 100%;
+  margin-left: 2rem;
   padding-top: 5rem;
   justify-content: center;
 }
 
 .playlist-wrapper {
-  margin-left: 7rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
