--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@
   top: 0;
   box-shadow: 0 0 11px 0 rgb(0 0 0 / 75%);
   z-index: 1;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .link {
@@ -22,10 +24,12 @@
 
 main {
   height: 100vh;
-  /* background-color: #181818; */
-
   background-color: rgba(0, 0, 0, 0.05);
   overflow-y: auto;
+}
+.main-section {
+  display: flex;
+  width: 100%;
 }
 
 .nav--logo p {
@@ -33,6 +37,7 @@ main {
   color: #20639b;
   font-size: 3rem;
   letter-spacing: 0px;
+  margin-left: 4rem;
 }
 
 .video-card {
