--- a/src/css/playlistmodal.css
+++ b/src/css/playlistmodal.css
@@ -39,3 +39,9 @@ input[type="checkbox"] {
 .modal-hide {
   display: none;
 }
+
+@media (max-width: 768px) {
+  .modal--window {
+    max-width: 90%;
+  }
+}
