--- a/src/css/videoplayer.css
+++ b/src/css/videoplayer.css
@@ -1,11 +1,16 @@
 .video-player-section {
-  max-width: 1100px;
+  width: 100%;
   margin-top: 2rem;
-  margin: 2rem auto 0 auto;
+  margin: 2rem 1rem;
 }
 
 .video-heading {
   margin-top: 1.4rem;
+}
+
+.player {
+  width: auto;
+  height: 550px;
 }
 
 .player-btn-container {
@@ -52,4 +57,38 @@
 
 .likelist-active {
   color: #2894ec;
+}
+
+@media (max-width: 768px) {
+  .player {
+    height: 0;
+    position: relative;
+    padding-top: 56.25%;
+  }
+  .react-player {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .video-player-section {
+    margin: 0;
+  }
+
+  .video-wrapper {
+    margin: 1rem;
+    flex-direction: column;
+  }
+  .video-category {
+    align-self: flex-start;
+    margin-bottom: 1rem;
+  }
+
+  .video-heading {
+    margin: 1rem;
+  }
+
+  .player-icon-set {
+    padding: 1.5rem !important;
+  }
 }
