--- a/src/css/videoplayer.css
+++ b/src/css/videoplayer.css
@@ -5,6 +5,9 @@
 }
 
 .video-heading {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
   margin-top: 1.4rem;
 }
 
@@ -65,6 +68,9 @@
     position: relative;
     padding-top: 56.25%;
   }
+  .views {
+    margin-top: 1rem;
+  }
   .react-player {
     position: absolute;
     top: 0;
@@ -85,6 +91,7 @@
   }
 
   .video-heading {
+    flex-direction: column;
     margin: 1rem;
   }
 
